##########################
# Setup.py Configuration #
##########################
[metadata]
name = guilty_reloaded
version = 0.0.1-dev
description = Change meeeeee
long_description = file: README.rst

# Author information
author = Mauricio Pio de Lacerda
author_email = mauriciopl@gmail.com
maintainer = Mauricio Pio de Lacerda
maintainer_email = mauriciopl@gmail.com

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Networks Biology
    Systems Biology

[options]
install_requires =
    # PyBEL
    pybel>=0.13.0
    bel_repository
    bel_resources
    bio2bel_phewascatalog
    # Utils
    networkx
    requests
    click
    sqlalchemy
    tqdm
    # Scientific Python
    pandas
    scipy
    numpy
    # Everything else
    mygene
    opentargets


python_requires = >=3.6

packages = find:
package_dir =
    = src
zip_safe = true
